apps/media/plaxt/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plaxt-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - "plaxt.${PUBLIC_HOSTNAME}"
      secretName: plaxt-tls
  rules:
    - host: "plaxt.${PUBLIC_HOSTNAME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plaxt
                port:
                  number: 8000
